--- a/css/sas-sas.css
+++ b/css/sas-sas.css
@@ -25,11 +25,12 @@ body {
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
   padding: 25px;
   border-radius: 25px;
-  height: 290px;
+  height: 445px;
   transition: all 0.3s;
-  margin-top:2%;
+  margin-top:1%;
   margin-right:21%;
 }
+
 @media screen and (max-width: 992px) {
   .blog-slider {
     max-width: 680px;
@@ -52,6 +53,11 @@ body {
   display: flex;
   align-items: center;
 }
+
+#slider-5{
+  height:200px;
+}
+
 @media screen and (max-width: 768px) {
   .blog-slider__item {
     flex-direction: column;
