--- a/css/courses.css
+++ b/css/courses.css
@@ -25,10 +25,10 @@
   width: 100px;
   height: 100px;
   margin-bottom: 10px;
-  
 }
 
 section {
+  
   position: relative;
   width: 100%;
   display: flex;
@@ -36,14 +36,14 @@ section {
   align-items: center;
   background: #fff;
   overflow: hidden;
+  height: auto;
 }
-
 .swiper {
   width: 100%;
 }
 
 .swiper-slide {
-  margin-top: 8%;
+  margin-top: 18%;
   width: 400px;
   height: 500px;
   box-shadow: 0 15px 50px rgba(0, 0, 0, 0.4);
@@ -152,12 +152,10 @@ section {
   transition: #fff 0.3s ease;
   display: flex;
   justify-content: center;
-  
+  text-decoration: none;
 }
 
-.read:hover {
-  background-color: #1b7402;
-}
+
 
 .read h3{
   color: #fff;
@@ -166,14 +164,22 @@ section {
   font-size: 20px;
   font-weight: 800;
   margin: 0;
+  text-decoration: none;
 }
 
-.readmore a{
+.readmore a {
   color: #fff;
-  width: 400px;
+  text-decoration: none; /* Remove underline */
 }
 
+.readmore a:hover {
+  color: #1b7402; /* Change color on hover */
+}
 
 courses-.container{
   padding: 0;
+}
+
+.space{
+  margin-top: 10%;
 }
